@@ -8,6 +8,9 @@ http://couchdb-python.googlecode.com/hg/?r=default
  * Breaking change: `couchdb.schema` has been renamed to `couchdb.mapping`.
    This better reflects what is actually provided. Classes inside
    `couchdb.mapping` have been similarly renamed (e.g. `Schema` -> `Mapping`).
+ * Breaking change: `couchdb.schema.View` has been renamed to
+   `couchdb.mapping.ViewField`, in order to help distinguish it from
+   `couchdb.client.View`.
  * Breaking change: the `client.Server` properties `version` and `config`
    have become methods in order to improve API consistency.
  * Prevent `schema.ListField` objects from sharing the same default (issue 107).
